# pyapp.aiosmtplib

./: README.rst  pyproject.toml  pytest.ini
pyapp_ext/aiosmtplib/: __init__.py  checks.py  default_settings.py  factory.py  helpers.py
sample/: default_settings.py
tests/: test_checks.py  test_factory.py  test_helpers.py
